usermaintenance/src/main/fabric8/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ${project.artifactId}
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ${project.artifactId}
